Upgrade KotlinX Coroutines to 1.9.0-RC

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ kotlin = "2.0.0"
 android-minSdk = "24"
 android-compileSdk = "34"
 android-targetSdk = "34"
-kotlinx-coroutines = "1.8.1"
+kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.0-RC"
 compose = "1.6.10"
 androidx-activity = "1.9.0"
