--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ androidx-lifecycle = "2.8.1"
 composeBom = "2024.05.00"
 essenty = "2.0.0"
 detekt = "1.23.6"
+detekt-plugin-kode-composeRules = "1.3.0"
+detekt-plugin-nlopez-composeRules = "0.4.3"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -36,6 +38,9 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 essenty-backhandler = { module = "com.arkivanov.essenty:back-handler", version.ref = "essenty" }
+
+detekt-plugin-kode-composeRules = { module = "ru.kode:detekt-rules-compose", version.ref = "detekt-plugin-kode-composeRules" }
+detekt-plugin-nlopez-composeRules = { module = "io.nlopez.compose.rules:detekt", version.ref = "detekt-plugin-nlopez-composeRules" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
