--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ android-compileSdk = "34"
 android-targetSdk = "34"
 kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.0-RC"
-compose = "1.6.10"
+compose = "1.6.11"
 androidx-activity = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -16,6 +16,7 @@ essenty = "2.0.0"
 detekt = "1.23.6"
 detekt-plugin-kode-composeRules = "1.3.0"
 detekt-plugin-nlopez-composeRules = "0.4.3"
+compose-kotlinCompilerExtensionVersion = "1.5.14"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
