--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.configuration-cache=true
 
 #Kotlin
 kotlin.code.style=official
-kotlin.js.compiler=ir
+kotlin.apple.xcodeCompatibility.nowarn=true
 
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
