--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,8 @@ compose = "1.6.11"
 androidx-activity = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-androidx-lifecycle = "2.8.1"
-composeBom = "2024.05.00"
+androidx-lifecycle = "2.8.2"
+composeBom = "2024.06.00"
 essenty = "2.0.0"
 detekt = "1.23.6"
 detekt-plugin-kode-composeRules = "1.3.0"
@@ -32,6 +32,7 @@ androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecyc
 
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
 androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
