--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,9 @@ detekt = "1.23.6"
 detekt-plugin-kode-composeRules = "1.3.0"
 detekt-plugin-nlopez-composeRules = "0.4.3"
 compose-kotlinCompilerExtensionVersion = "1.5.14"
+ksp = "2.0.0-1.0.21"
+ksp-testing = "1.6.0"
+kotlinpoet = "1.17.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -40,6 +43,10 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 essenty-backhandler = { module = "com.arkivanov.essenty:back-handler", version.ref = "essenty" }
+ksp-api = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+ksp-testing = { module = "com.github.tschuchortdev:kotlin-compile-testing-ksp", version.ref = "ksp-testing" }
+
+kotlinpoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "kotlinpoet" }
 
 detekt-plugin-kode-composeRules = { module = "ru.kode:detekt-rules-compose", version.ref = "detekt-plugin-kode-composeRules" }
 detekt-plugin-nlopez-composeRules = { module = "io.nlopez.compose.rules:detekt", version.ref = "detekt-plugin-nlopez-composeRules" }
@@ -53,3 +60,5 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
