Setup publishing artifacts

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,5 @@ kotlin.mpp.enableCInteropCommonization=true
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
+org.jetbrains.compose.experimental.macos.enabled=true
