--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,21 @@
 [versions]
 agp = "8.2.2"
-kotlin = "2.0.0"
+kotlin = "2.0.20"
 android-minSdk = "24"
 android-compileSdk = "34"
 android-targetSdk = "34"
 kotlinx-coroutines = "1.9.0-RC"
 kotlinx-serialization = "1.7.0-RC"
-compose = "1.6.11"
-androidx-activity = "1.9.0"
+compose = "1.7.0-beta01"
+androidx-activity = "1.9.2"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-androidx-lifecycle = "2.8.2"
-composeBom = "2024.06.00"
+androidx-lifecycle = "2.8.5"
+composeBom = "2024.09.00"
 essenty = "2.0.0"
 detekt = "1.23.6"
 detekt-plugin-kode-composeRules = "1.3.0"
 detekt-plugin-nlopez-composeRules = "0.4.3"
-compose-kotlinCompilerExtensionVersion = "1.5.14"
 ksp = "2.0.0-1.0.21"
 ksp-testing = "1.6.0"
 kotlinpoet = "1.17.0"
