--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ androidx-lifecycle = "2.8.5"
 composeBom = "2024.09.00"
 essenty = "2.0.0"
 detekt = "1.23.6"
+jreleaser = "1.14.0"
 detekt-plugin-kode-composeRules = "1.3.0"
 detekt-plugin-nlopez-composeRules = "0.4.3"
 ksp = "2.0.0-1.0.21"
@@ -64,3 +65,4 @@ compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+jreleaser = { id = "org.jreleaser", version.ref = "jreleaser" }
