--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 org.gradle.caching=true
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
 
 #Kotlin
 kotlin.code.style=official
@@ -15,3 +15,10 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 
 org.jetbrains.compose.experimental.macos.enabled=true
+
+mavenCentralUsername=LSedXe/g
+mavenCentralPassword=ikDV7Qn04PMEwANMskxgWET01WPxFVBTmx6pv7fgB0IT
+
+signing.keyId=9628A75D
+signing.password=DHB*GXF[@<xu%=)J,s'83N
+signing.secretKeyRingFile=/Users/krozov/.gnupg/secring.gpg
