--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,21 +4,22 @@ kotlin = "2.0.20"
 android-minSdk = "24"
 android-compileSdk = "34"
 android-targetSdk = "34"
-kotlinx-coroutines = "1.9.0-RC"
-kotlinx-serialization = "1.7.0-RC"
-compose = "1.7.0-beta01"
+kotlinx-coroutines = "1.9.0"
+kotlinx-serialization = "1.7.1"
+compose = "1.7.0-beta02"
 androidx-activity = "1.9.2"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-androidx-lifecycle = "2.8.5"
-composeBom = "2024.09.00"
+androidx-lifecycle = "2.8.6"
+composeBom = "2024.09.03"
 essenty = "2.0.0"
 detekt = "1.23.6"
 detekt-plugin-kode-composeRules = "1.3.0"
 detekt-plugin-nlopez-composeRules = "0.4.3"
-ksp = "2.0.0-1.0.21"
+ksp = "2.0.20-1.0.25"
 ksp-testing = "1.6.0"
 kotlinpoet = "1.17.0"
+mavenPublish-vanniktech = "0.29.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -64,3 +65,5 @@ compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
+mavenPublish-vanniktech = { id = "com.vanniktech.maven.publish", version.ref = "mavenPublish-vanniktech" }
+
