--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-agp = "8.2.2"
-kotlin = "2.0.20"
+agp = "8.6.1"
+kotlin = "2.1.10"
 android-minSdk = "24"
-android-compileSdk = "34"
-android-targetSdk = "34"
-kotlinx-coroutines = "1.9.0-RC"
-kotlinx-serialization = "1.7.0-RC"
-compose = "1.7.0-beta01"
-androidx-activity = "1.9.2"
-coreKtx = "1.13.1"
+android-compileSdk = "35"
+android-targetSdk = "35"
+kotlinx-coroutines = "1.9.0"
+kotlinx-serialization = "1.7.3"
+compose = "1.7.0"
+androidx-activity = "1.10.0"
+coreKtx = "1.15.0"
 junit = "4.13.2"
-androidx-lifecycle = "2.8.5"
-composeBom = "2024.09.00"
-essenty = "2.0.0"
-detekt = "1.23.6"
+androidx-lifecycle = "2.8.7"
+composeBom = "2025.01.01"
+essenty = "2.4.0"
+detekt = "1.23.7"
 detekt-plugin-kode-composeRules = "1.3.0"
-detekt-plugin-nlopez-composeRules = "0.4.3"
-ksp = "2.0.0-1.0.21"
+detekt-plugin-nlopez-composeRules = "0.4.22"
+ksp = "2.1.10-1.0.29"
 ksp-testing = "1.6.0"
-kotlinpoet = "1.17.0"
+kotlinpoet = "1.18.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
